Fixed home page section size covering the footer links

--- a/src/index.css
+++ b/src/index.css
@@ -163,6 +163,7 @@ body, footer {
   @apply rounded-lg p-10;
   position: relative;
   top: 70px;
+  height: 580px;
 }
 .homePage .section h1 {
   color: var(--text-white);
